# onmf-timeseries

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: algorithms.md  api_reference.md  user_guide.md
examples/financial_markets/: README.md  run_analysis.py
notebooks/: 01_financial_demo.ipynb
results/financial_markets/01_exp/: config.yaml
results/financial_markets/01_exp/predictions/: metrics_comparison.csv  metrics_confidence_intervals.csv  predictions_comparison.csv
results/financial_markets/02_exp/: config.yaml
results/financial_markets/02_exp/predictions/: metrics_comparison.csv  metrics_confidence_intervals.csv  predictions_comparison.csv
results/financial_markets/best_result/: config.yaml
results/financial_markets/best_result/predictions/: metrics_comparison.csv  metrics_confidence_intervals.csv  predictions_comparison.csv
src/onmf/: __init__.py  baselines.py  model.py  preprocessing.py  utils.py  visualization.py
tests/: test_model.py  test_preprocessing.py
